# TBH.AI_SecureAgents

./: .gitignore  LICENSE  README.md  TBH_Secure_Agents_Demo.ipynb  main_example_modified.py  main_example_modified_output.txt  pyproject.toml  setup.py
docs/: attack_prevention.md  installation.md  security_checkpoints.md  security_features.md  security_focus.md  security_profiles_guide.md  technical_security_implementation.md  usage_guide.md  version_changes.md
examples/: README.md  code_security_review.py  example_output_6.md  example_output_7.md  example_usage.py  example_usage_2.py  example_usage_3.py  example_usage_4.py  example_usage_5.py  example_usage_6.py  example_usage_7.py  flask_app_generation.py  information_extraction.py  security_test.py  security_vulnerability_summary.py  story_concept_marketing.py
examples/colab_notebooks/: guardrails_example.ipynb
examples/guardrails/: easy_guardrails_output.txt
examples/main_example/: README.md  comprehensive_example.py  comprehensive_example_output.txt  main_example.py  main_example_output.txt  requirements.txt  run_example.sh
examples/security_testing/: README.md  enhanced_security_test.py  multi_agent_security_test.py  reliability_test.py
tbh_secure_agents/: __init__.py  agent.py  crew.py  task.py
