[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tbh_secure_agents"
version = "0.0.1"
authors = [
  { name="Saish", email="saish.shinde15@gmail.com" },
]
description = "A secure multi-agent framework by TBH.AI focused on high security."
readme = "README.md"
license = "MIT" # Use simple SPDX string as recommended
# license-files = ["LICENSE"] # Removed license-files field
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    # "License :: OSI Approved :: MIT License", # Removed deprecated classifier
]
dependencies = [
    "google-generativeai>=0.4.0",
    # Add other core dependencies here if needed
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "flake8>=3.8", "black>=20.8b1"]

[project.urls]
"Homepage" = "https://github.com/saishshinde15/TBH.AI_SecureAgents.git"
"Bug Tracker" = "https://github.com/saishshinde15/TBH.AI_SecureAgents/issues"
"Repository" = "https://github.com/saishshinde15/TBH.AI_SecureAgents.git"

# If you have console scripts:
# [project.scripts]
# tbh-agent = "tbh_secure_agents.cli:main"

[tool.hatch.metadata]
# Attempt to prevent inclusion of license file content in wheel metadata
# Rely solely on the license SPDX identifier in the [project] section
allow-direct-references = true
include-license-file = false

[tool.setuptools.packages.find]
# Explicitly find packages only within the 'tbh_secure_agents' directory
# This prevents finding 'test_venv' at the top level.
where = ["."] # Look in the current directory
include = ["tbh_secure_agents*"] # Include only things starting with tbh_secure_agents
exclude = ["test_venv*"] # Explicitly exclude test_venv just in case
